HTML update and basic styling

--- a/index.html
+++ b/index.html
@@ -5,10 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" defer href="./script.js">
+    <script defer src = "./script.js"></script>
     <title>Tirtharaj Roy</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div id="heading">
+                <h1>Tirtharaj Roy</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="showcase">
+        <div class="container">
+            <h1>Hi, I'm Tirtharaj</h1>
+            <p>Thanks for checking out my portfolio!</p>
+        </div>
+    </section>
+
+    <section id="skills">
+        <h2 id="skills_heading">Skills</h2>
+        <div class="container">
+            <div class="box">
+                <img src="img/html.png" class="box_img" />
+                <h3>HTML</h3>
+                <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser.</p>
+            </div>
+            <div class="box">
+                <img src="img/css.png" class="box_img" />
+                <h3>CSS</h3>
+                <p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.</p>
+            </div>
+            <div class="box">
+                <img src="img/js.png" class="box_img" />
+                <h3>JS</h3>
+                <p>JavaScript, often abbreviated to JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <h2>About</h2>
+        <p>Hey there! I'm Tirtharaj Roy, a Full-stack Developer, specializing on JavaScript. I have some work experience from a few internships and completed some projects. I like to collaborate on projects and learn more about programming languages.</p>
+    </section>
+
+    <section id="contact">
+        <h2 id="contact_heading">Contact</h2>
+        <div class="container">
+            <div id="form"></div>
+            <div id="frame"></div>
+        </div>
+    </section>
+
+    <footer id="footer" role="contentinfo">
+        <p>Handcrafted by me &copy; Copyright 2022</p>
+    </footer>
 </body>
 </html>
