--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
     <section id="about">
         <h2>About</h2>
-        <p>Hey there! I'm Tirtharaj Roy, a Full-stack Developer, specializing on JavaScript. I have some work experience from a few internships and completed some projects. I like to collaborate on projects and learn more about programming languages.</p>
+        <p>Hey there! I'm Tirtharaj Roy, a Full-stack Developer, specializing on JavaScript. I have some work experience from a few internships and completed some projects. I like to collaborate on projects and learn more about programming languages. I have completed five-courses, developed by Google, that include hands-on, practice-based assessments and are designed to prepare them for entry-level roles in IT support. They are competent in foundational skills, including troubleshooting and customer service, networking, operating systems, system administration, and security.</p>
     </section>
 
     <section id="contact">
-        <h2 id="contact_heading">Contact</h2>
+        <h2>Contact</h2>
         <div class="container">
             <div id="form"></div>
             <div id="frame"></div>
@@ -66,7 +66,7 @@
     </section>
 
     <footer id="footer" role="contentinfo">
-        <p>Handcrafted by me &copy; Copyright 2022</p>
+        <p>Handcrafted by me &nbsp; &copy; &nbsp;Copyright 2022</p>
     </footer>
 </body>
 </html>
