--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="img/css.png">
     <script defer src = "./script.js"></script>
     <title>Tirtharaj Roy</title>
 </head>
@@ -60,8 +61,22 @@
     <section id="contact">
         <h2>Contact</h2>
         <div class="container">
-            <div id="form"></div>
-            <div id="frame"></div>
+            <div id="form">
+                <form action="">
+                    <label for="fname">First Name:</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                    <label for="lname">Last Name:</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Your email id..">
+                    <label for="message">Message:</label>
+                    <textarea name="message" type="text" id="message" placeholder="Message"></textarea>
+                    <input type="submit" value="Submit" id="input-submit">
+                </form>
+            </div>
+            <div id="frame">
+                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1096.1049762583111!2d88.40808784117958!3d22.472534121037647!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1663688818651!5m2!1sen!2sin" frameborder="0"></iframe>
+            </div>
         </div>
     </section>
 
