Responsive Design Added

--- a/index.html
+++ b/index.html
@@ -1,87 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="img/css.png">
-    <script defer src = "./script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="img/css.png" />
+    <script defer src="./script.js"></script>
     <title>Tirtharaj Roy</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <div id="heading">
-                <h1>Tirtharaj Roy</h1>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+      <div class="container">
+        <div id="heading">
+          <h1>Tirtharaj Roy</h1>
         </div>
+        <nav>
+          <ul>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <section id="showcase">
-        <div class="container">
-            <h1>Hi, I'm Tirtharaj</h1>
-            <p>Thanks for checking out my portfolio!</p>
-        </div>
+      <div class="container">
+        <h1>Hi, I'm Tirtharaj</h1>
+        <p>Thanks for checking out my portfolio!</p>
+      </div>
     </section>
 
     <section id="skills">
-        <h2 id="skills_heading">Skills</h2>
-        <div class="container">
-            <div class="box">
-                <img src="img/html.png" class="box_img" />
-                <h3>HTML</h3>
-                <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser.</p>
-            </div>
-            <div class="box">
-                <img src="img/css.png" class="box_img" />
-                <h3>CSS</h3>
-                <p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.</p>
-            </div>
-            <div class="box">
-                <img src="img/js.png" class="box_img" />
-                <h3>JS</h3>
-                <p>JavaScript, often abbreviated to JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.</p>
-            </div>
+      <h2 id="skills_heading">Skills</h2>
+      <div class="container">
+        <div class="box">
+          <img src="img/html.png" class="box_img" />
+          <h3>HTML</h3>
+          <p>
+            The HyperText Markup Language or HTML is the standard markup
+            language for documents designed to be displayed in a web browser.
+          </p>
         </div>
+        <div class="box">
+          <img src="img/css.png" class="box_img" />
+          <h3>CSS</h3>
+          <p>
+            Cascading Style Sheets is a style sheet language used for describing
+            the presentation of a document written in a markup language such as
+            HTML or XML.
+          </p>
+        </div>
+        <div class="box">
+          <img src="img/js.png" class="box_img" />
+          <h3>JS</h3>
+          <p>
+            JavaScript, often abbreviated to JS, is a programming language that
+            is one of the core technologies of the World Wide Web, alongside
+            HTML and CSS.
+          </p>
+        </div>
+      </div>
     </section>
 
     <section id="about">
-        <h2>About</h2>
-        <p>Hey there! I'm Tirtharaj Roy, a Full-stack Developer, specializing on JavaScript. I have some work experience from a few internships and completed some projects. I like to collaborate on projects and learn more about programming languages. I have completed five-courses, developed by Google, that include hands-on, practice-based assessments and are designed to prepare them for entry-level roles in IT support. They are competent in foundational skills, including troubleshooting and customer service, networking, operating systems, system administration, and security.</p>
+      <h2>About</h2>
+      <p>
+        Hey there! I'm Tirtharaj Roy, a Full-stack Developer, specializing on
+        JavaScript. I have some work experience from a few internships and
+        completed some projects. I like to collaborate on projects and learn
+        more about programming languages. I have completed five-courses,
+        developed by Google, that include hands-on, practice-based assessments
+        and are designed to prepare them for entry-level roles in IT support.
+        They are competent in foundational skills, including troubleshooting and
+        customer service, networking, operating systems, system administration,
+        and security.
+      </p>
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
-        <div class="container">
-            <div id="form">
-                <form action="">
-                    <label for="fname">First Name:</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-                    <label for="lname">Last Name:</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Your email id..">
-                    <label for="message">Message:</label>
-                    <textarea name="message" type="text" id="message" placeholder="Message"></textarea>
-                    <input type="submit" value="Submit" id="input-submit">
-                </form>
-            </div>
-            <div id="frame">
-                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1096.1049762583111!2d88.40808784117958!3d22.472534121037647!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1663688818651!5m2!1sen!2sin" frameborder="0"></iframe>
-            </div>
+      <h2>Contact</h2>
+      <div class="container">
+        <div id="form">
+          <form
+            name="gform"
+            id="gform"
+            enctype="text/plain"
+            action="https://docs.google.com/forms/d/e/1FAIpQLScLacebewpnyM9g02R0xWhqxXER5kIFycQl3nJF6Y1ifi8cLQ/formResponse?usp=pp_url"
+            target="hidden_iframe"
+            onsubmit="submitted=true;"
+          >
+            <label for="fname">First Name:</label>
+            <input
+              type="text"
+              id="fname"
+              name="firstname"
+              placeholder="Your name.."
+              required
+            />
+            <label for="lname">Last Name:</label>
+            <input
+              type="text"
+              id="lname"
+              name="lastname"
+              placeholder="Your last name.."
+            />
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Your email id.."
+              required
+            />
+            <label for="message">Message:</label>
+            <textarea
+              name="message"
+              type="text"
+              id="message"
+              placeholder="Message"
+            ></textarea>
+            <input type="submit" value="Submit" id="input-submit" />
+          </form>
+          <iframe
+            name="hidden_iframe"
+            id="hidden_iframe"
+            style="display: none"
+            onload="if(submitted) {}"
+          ></iframe>
         </div>
+        <div id="frame">
+          <iframe
+            id="map"
+            src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1096.1049762583111!2d88.40808784117958!3d22.472534121037647!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1663688818651!5m2!1sen!2sin"
+            frameborder="0"
+          ></iframe>
+        </div>
+      </div>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript">
+      var submitted = false;
+    </script>
+    <script type="text/javascript">
+      $("#gform").on("submit", function (e) {
+        $("#gform *").fadeOut(1000);
+        $("#gform").prepend("Your submission has been processed...");
+      });
+    </script>
 
     <footer id="footer" role="contentinfo">
-        <p>Handcrafted by me &nbsp; &copy; &nbsp;Copyright 2022</p>
+      <p>Handcrafted by me &nbsp; &copy; &nbsp;Copyright 2022</p>
     </footer>
-</body>
+  </body>
 </html>
