--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="icon" href="img/css.png" />
     <script defer src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <title>Tirtharaj Roy</title>
   </head>
   <body>
@@ -27,7 +29,7 @@
 
     <section id="showcase">
       <div class="container">
-        <h1>Hi, I'm Tirtharaj</h1>
+        <h1><span class="heading_span"></span></h1>
         <p>Thanks for checking out my portfolio!</p>
       </div>
     </section>
@@ -139,16 +141,6 @@
         </div>
       </div>
     </section>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript">
-      var submitted = false;
-    </script>
-    <script type="text/javascript">
-      $("#gform").on("submit", function (e) {
-        $("#gform *").fadeOut(1000);
-        $("#gform").prepend("Your submission has been processed...");
-      });
-    </script>
 
     <footer id="footer" role="contentinfo">
       <p>Handcrafted by me &nbsp; &copy; &nbsp;Copyright 2022</p>
