--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2 id="skills_heading">Skills</h2>
       <div class="container">
         <div class="box">
-          <img src="img/html.png" class="box_img" />
+          <img src="img/html.png" class="box_img" alt="" />
           <h3>HTML</h3>
           <p>
             The HyperText Markup Language or HTML is the standard markup
@@ -46,7 +46,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="img/css.png" class="box_img" />
+          <img src="img/css.png" class="box_img" alt="" />
           <h3>CSS</h3>
           <p>
             Cascading Style Sheets is a style sheet language used for describing
@@ -55,7 +55,7 @@
           </p>
         </div>
         <div class="box">
-          <img src="img/js.png" class="box_img" />
+          <img src="img/js.png" class="box_img" alt="" />
           <h3>JS</h3>
           <p>
             JavaScript, often abbreviated to JS, is a programming language that
@@ -119,7 +119,6 @@
             <label for="message">Message:</label>
             <textarea
               name="message"
-              type="text"
               id="message"
               placeholder="Message"
             ></textarea>
@@ -136,7 +135,6 @@
           <iframe
             id="map"
             src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1096.1049762583111!2d88.40808784117958!3d22.472534121037647!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1663688818651!5m2!1sen!2sin"
-            frameborder="0"
           ></iframe>
         </div>
       </div>
