--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>Thanks for checking out my portfolio!</p>
       </div>
     </section>
-
+    <div id="skew"></div>
     <section id="skills">
       <h2 id="skills_heading">Skills</h2>
       <div class="container">
